<package format="2">
  <name>fcl</name>
  <description>fcl</description>
  <version>0.3.2</version>
  <license>BSD</license>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
